# backend/src/materials/dto/create-material.dto.ts
@@ -1,1 +1,7 @@
-export class CreateMaterialDto {}
+export class CreateMaterialDto {
+  name: string;
+  type: string;
+  photoUrl?: string;
+  co2Saved?: number;
+  waterSaved?: number;
+}
